added product cards + most popular product

--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
                             <i class="fa fa-shopping-basket" aria-hidden="true"></i>
                             <span>Place Bid</span>
                         </div>
-                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
                         <div class="live-creator">
                             <img src="assets/axies-images/04_Top Seller/avt-1.jpg" alt="first top seller" />
                             <div class="creator-info">
@@ -155,7 +157,9 @@ Like                            </button>
                             <i class="fa fa-shopping-basket" aria-hidden="true"></i>
                             <span>Place Bid</span>
                         </div>
-                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
                         <div class="live-creator">
                             <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
                             <div class="creator-info">
@@ -185,7 +189,9 @@ Like                            </button>
                             <i class="fa fa-shopping-basket" aria-hidden="true"></i>
                             <span>Place Bid</span>
                         </div>
-                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
                         <div class="live-creator">
                             <img src="assets/axies-images/04_Top Seller/avt-3.jpg" alt="first top seller" />
                             <div class="creator-info">
@@ -215,7 +221,9 @@ Like                            </button>
                             <i class="fa fa-shopping-basket" aria-hidden="true"></i>
                             <span>Place Bid</span>
                         </div>
-                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
                         <div class="live-creator">
                             <img src="assets/axies-images/04_Top Seller/avt-4.jpg" alt="first top seller" />
                             <div class="creator-info">
@@ -449,7 +457,9 @@ Like                            </button>
                         <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
                         <span><i class="fa fa-heart-o" aria-hidden="true"></i>
                         100</span>
-                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
                         <div class="live-creator">
                             <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
                             <div class="creator-info">
@@ -474,7 +484,9 @@ View History                            </button>
                         <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg" alt="image live auction" />
                         <span><i class="fa fa-heart-o" aria-hidden="true"></i>
                         100</span>
-                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
                         <div class="live-creator">
                             <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
                             <div class="creator-info">
@@ -499,7 +511,9 @@ View History                            </button>
                         <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg" alt="image live auction" />
                         <span><i class="fa fa-heart-o" aria-hidden="true"></i>
                         100</span>
-                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
                         <div class="live-creator">
                             <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
                             <div class="creator-info">
@@ -524,7 +538,9 @@ View History                            </button>
                         <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
                         <span><i class="fa fa-heart-o" aria-hidden="true"></i>
                         100</span>
-                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
                         <div class="live-creator">
                             <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
                             <div class="creator-info">
@@ -549,7 +565,9 @@ View History                            </button>
                         <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg" alt="image live auction" />
                         <span><i class="fa fa-heart-o" aria-hidden="true"></i>
                         100</span>
-                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
                         <div class="live-creator">
                             <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
                             <div class="creator-info">
@@ -574,7 +592,9 @@ View History                            </button>
                         <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg" alt="image live auction" />
                         <span><i class="fa fa-heart-o" aria-hidden="true"></i>
                         100</span>
-                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
                         <div class="live-creator">
                             <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
                             <div class="creator-info">
@@ -599,7 +619,9 @@ View History                            </button>
                         <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
                         <span><i class="fa fa-heart-o" aria-hidden="true"></i>
                         100</span>
-                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
                         <div class="live-creator">
                             <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
                             <div class="creator-info">
@@ -624,7 +646,9 @@ View History                            </button>
                         <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="image live auction" />
                         <span><i class="fa fa-heart-o" aria-hidden="true"></i>
                         100</span>
-                        <h3>"Hamlet Contemplates Yorick's...</h3>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
                         <div class="live-creator">
                             <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
                             <div class="creator-info">
