--- a/single.html
+++ b/single.html
@@ -190,6 +190,146 @@
             </div>
             </div>
         </section>
+        <section id="live-action">
+            <div class="live-auction-bar">
+                <div class="live-control">
+                    <h3>Live Auction</h3>
+                    <h5>Explore More</h5>
+                </div>
+                <div class="live-cards">
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="image live auction" />
+                        <div class="timer">
+                            <i class="fa fa-free-code-camp" aria-hidden="true"></i>
+                            <span> 5 : 23 : 23 : 08</span>
+                        </div>
+                        <div class="place-bid">
+                            <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                            <span>Place Bid</span>
+                        </div>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-1.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-heart-o" aria-hidden="true"></i>
+Like                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="image live auction" />
+                        <div class="timer">
+                            <i class="fa fa-free-code-camp" aria-hidden="true"></i>
+                            <span> 5 : 23 : 23 : 08</span>
+                        </div>
+                        <div class="place-bid">
+                            <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                            <span>Place Bid</span>
+                        </div>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-2.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-heart-o" aria-hidden="true"></i>
+Like                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg" alt="image live auction" />
+                        <div class="timer">
+                            <i class="fa fa-free-code-camp" aria-hidden="true"></i>
+                            <span> 5 : 23 : 23 : 08</span>
+                        </div>
+                        <div class="place-bid">
+                            <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                            <span>Place Bid</span>
+                        </div>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-3.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-heart-o" aria-hidden="true"></i>
+Like                            </button>
+                        </div>
+
+                    </div>
+                    <div class="cards">
+                        <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg" alt="image live auction" />
+                        <div class="timer">
+                            <i class="fa fa-free-code-camp" aria-hidden="true"></i>
+                            <span> 5 : 23 : 23 : 08</span>
+                        </div>
+                        <div class="place-bid">
+                            <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                            <span>Place Bid</span>
+                        </div>
+                        <h3>
+                            <a href="single.html">"Hamlet Contemplates Yorick's...</a>
+                        </h3>
+                        <div class="live-creator">
+                            <img src="assets/axies-images/04_Top Seller/avt-4.jpg" alt="first top seller" />
+                            <div class="creator-info">
+                                <p>Creator</p>
+                                <h4>SalvadroDalli</h4>
+                            </div>
+                            <button>BSC</button>
+                        </div>
+                        <div class="current-bid">
+                            <div class="bid">
+                                <p>Current Bid
+                                </p>
+                                <h4>4.89 ETH<span> = 12.29$</span></h4>
+                            </div>
+                            <button><i class="fa fa-heart-o" aria-hidden="true"></i>
+Like                            </button>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
     </main>
     <footer>
         <div class="footer-container ">
