--- a/single.html
+++ b/single.html
@@ -12,15 +12,13 @@
     <link rel="icon" href="assets/img/favicon-16x16.png" type="image/png" sizes="16x16">
     <!-- keyframe style -->
     <link rel="stylesheet" href="assets/keyframes.css" />
-    <!-- hover library -->
-    <link rel="stylesheet" href="assets/hover/hover.css">
     <!-- style css -->
     <link rel="stylesheet" href="style.css" />
     <!-- single style  -->
     <link rel="stylesheet" href="assets/css/single.css" />
 </head>
 
-<body>
+<body onscroll="headerBgChenger()" id="bodySection">
     <header>
         <div id="container">
             <div class="upMenu">
@@ -389,3 +387,28 @@ Like                            </button>
             </div>
         </div>
     </footer>
+    <div class="share-v">
+        <span>
+            <i class="fa fa-telegram" aria-hidden="true"></i>
+        </span>
+        <span>
+            <i class="fa fa-youtube-play" aria-hidden="true"></i>
+        </span>
+        <span>
+            <i class="fa fa-audio-description" aria-hidden="true"></i>
+        </span>
+        <span>
+            <i class="fa fa-plane" aria-hidden="true"></i>
+        </span>
+        <span>
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+        </span>
+        <span>
+            <i class="fa fa-facebook" aria-hidden="true"></i>
+        </span>
+    </div>
+    </main>
+    <script src="assets/js/app.js"></script>
+</body>
+
+</html>
