edit style file use grid instead of flex

--- a/index.html
+++ b/index.html
@@ -258,12 +258,15 @@ Like                            </button>
                             <div class="top-images">
                                 <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="popular image collection">
                                 <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="popular image collection">
-                            </div>
-                            <div class="bottom-images">
                                 <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg" alt="popular image collection">
                                 <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg" alt="popular image collection">
                                 <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="popular image collection">
                             </div>
+                            <!-- <div class="bottom-images">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="popular image collection">
+                            </div> -->
                         </div>
                         <div class="popular-info">
                             <img src="assets/axies-images/04_Top Seller/avt-6.jpg">
@@ -283,12 +286,15 @@ Like                            </button>
                             <div class="top-images">
                                 <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="popular image collection">
                                 <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="popular image collection">
                             </div>
-                            <div class="bottom-images">
+                            <!-- <div class="bottom-images">
                                 <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="popular image collection">
                                 <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg" alt="popular image collection">
                                 <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg" alt=" popular image collection ">
-                            </div>
+                            </div> -->
                         </div>
                         <div class="popular-info ">
                             <img src="assets/axies-images/04_Top Seller/avt-7.jpg ">
@@ -305,15 +311,18 @@ Like                            </button>
                     </div>
                     <div class="cards ">
                         <div class="popular-gallery ">
-                            <div class="top-images ">
-                                <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg " alt="popular image collection ">
-                                <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg " alt="popular image collection ">
+                            <div class="top-images">
+                                <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-10.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/image-box-21.jpg" alt="popular image collection">
+                                <img src="assets/axies-images/03_Live Auctions/card-item8.jpg" alt="popular image collection">
                             </div>
-                            <div class="bottom-images ">
+                            <!-- <div class="bottom-images ">
                                 <img src="assets/axies-images/03_Live Auctions/card-item8.jpg " alt="popular image collection ">
                                 <img src="assets/axies-images/03_Live Auctions/image-box-11.jpg " alt="popular image collection ">
                                 <img src="assets/axies-images/03_Live Auctions/card-item8.jpg " alt="popular image collection ">
-                            </div>
+                            </div> -->
                         </div>
                         <div class="popular-info ">
                             <img src="assets/axies-images/04_Top Seller/avt-8.jpg ">
