added profile edite

--- a/single.html
+++ b/single.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/css/single.css" />
 </head>
 
-<body onscroll="headerBgChenger()" id="bodySection">
+<body id="bodySection">
     <header>
         <div id="container">
             <div class="upMenu">
