--- a/profile-edit.html
+++ b/profile-edit.html
@@ -77,7 +77,7 @@
         </div>
         <section id="profile">
             <div class="wrapper">
-                <div class="profile-view">
+                <form class="profile-view">
                     <div class="profile-picture">
                         <img src="assets/axies-images/04_Top Seller/avt-5.jpg" alt="">
                         <button>BTN</button>
@@ -96,11 +96,14 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="profile-account">
+                            <div class="form-divider">
+                                <h4>Account info</h4>
+                            </div>
+                        </div>
                     </div>
-                    <form class="profile-account">
 
-                    </form>
-                </div>
+                </form>
             </div>
 
             </div>
